# rv_msgs

./: CMakeLists.txt  README.md  mapping_rule.yaml  package.xml
action/: ActuateGripper.action  GraspObject.action  MoveToNamedLocation.action  MoveToNamedPose.action  MoveToPose.action
msg/: Detection.msg  ManipulatorState.msg  Object.msg  Objects.msg  ROS1Message.msg
srv/: EstimateAge.srv  ExampleIsLunchHour.srv  ExampleTransformImage.srv  FindObjects.srv  GetDetections.srv  GetGraspPose.srv  GetLocationList.srv  GetObjectPose.srv  GetOccupancyGridFromObservation.srv  GetSyncedImages.srv  GetTaskList.srv  GuessGender.srv  NamedPoseQuery.srv  RecogniseFace.srv  SaveFace.srv  SetCartesianImpedance.srv  SetNamedPose.srv
