<?xml version="1.0"?>
<package format="2">
  <name>rv_msgs</name>
  <version>0.1.0</version>
  <description>The rv_msgs package</description>

  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
