<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rv_msgs</name>
  <version>0.3.2</version>
  <description>The rv_msgs package</description>

  <maintainer email="g.suddrey@qut.edu.au">Gavin Suddrey</maintainer>

  <license>BSD</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>action_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

    <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rule.yaml"/>
  </export>
</package>
