<?xml version="1.0"?>
<package format="2">
  <name>rv_msgs</name>
  <version>0.3.5</version>
  <description>The rv_msgs package</description>

  <maintainer email="g.suddrey@qut.edu.au">Gavin Suddrey</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
